--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "license": "ISC",
   "devDependencies": {
     "eslint": "3.18.0",
-    "eslint-config-google": "0.7.1"
+    "eslint-config-google": "0.7.1",
+    "express": "4.15.2",
+    "serve-index": "1.8.0"
   },
   "dependencies": {
     "angular": "1.6.3",
