--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "eslint": "3.18.0",
     "eslint-config-google": "0.7.1",
     "express": "4.15.2",
-    "serve-index": "1.8.0"
+    "serve-index": "1.8.0",
+    "webpack": "2.3.0",
+    "webpack-dev-middleware": "1.10.1"
   },
   "dependencies": {
     "angular": "1.6.3",
